# swipedel

./: .gitignore  PRE_PUSH_CHECKLIST.md  README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/ml_assets/: dosya_risk_modeli.json  ext_encoder.json  rare_exts.json
src-tauri/src/: lib.rs  main.rs
